CLC-5368 Prevent button text wrapping in Official Sections tool

--- a/src/assets/stylesheets/_canvas_base.scss
+++ b/src/assets/stylesheets/_canvas_base.scss
@@ -575,6 +575,7 @@ button.bc-template-canvas-maintenance-notice-button {
       font-size: 12px;
       margin: 0;
       padding: 2px 8px;
+      white-space: nowrap;
     }
 
     .bc-template-sections-table-button-undo-add {
